--- a/index.html
+++ b/index.html
@@ -1,38 +1,63 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
-<meta charset=utf-8>
-<title>AWS S3</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset=utf-8>
+    <title>Amazon Bedrock</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header>
-<img class="logo" src="https://d1.awsstatic.com/uki-digital-marketing-content-directory/AWS%20logo.884800f1674e960b6134af7340ac45ab21d99682.png" alt="logo">
-<p class="pageTitle">Simple Storage Service (S3)</p>
-<nav class="hover-div">
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="use-cases.html">Use Cases</a></li>
-<li><a href="how-to.html">How To</a></li>
-</ul>
-</nav>
-</header>
-<section>
-<h2>About S3</h2>
-<p>Amazon Simple Storage Service (Amazon S3) is an object storage service offering industry-leading scalability, data availability, security, and performance. Millions of customers of all sizes and industries store, manage, analyze, and protect any amount of data for virtually any use case, such as data lakes, cloud-native applications, and mobile apps. With cost-effective storage classes and easy-to-use management features, you can optimize costs, organize and analyze data, and configure fine-tuned access controls to meet specific business and compliance requirements.
-</p>
-<img src="s3.png" alt="S3">
-<h2>Benefits</h2>
-<ul>
-    <li>Scalability</li>
-    <li>Durability</li>
-    <li>Availability</li>
-    <li>Security and Data Protection</li>
-    <li>Lowest Price and Highest Performance</li>
-</ul>
-</section>
-<footer>
-<p>&copy;Amazon Web Services</p>
-</footer>
+    <header>
+        <img class="logo"
+            src="https://d1.awsstatic.com/uki-digital-marketing-content-directory/AWS%20logo.884800f1674e960b6134af7340ac45ab21d99682.png"
+            alt="logo">
+        <p class="pageTitle">Amazon Bedrock</p>
+        <nav class="hover-div header-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="use-cases.html">Use Cases</a></li>
+                <li><a href="how-to.html">How To</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h2><b>About Amazon Bedrock</b></h2>
+        <p>Amazon Bedrock is a fully managed service that offers a choice of high-performing foundation models (FMs)
+            from leading AI companies like AI21 Labs, Anthropic, Cohere, Meta, Mistral AI, Stability AI, and Amazon
+            through a single API, along with a broad set of capabilities you need to build generative AI applications
+            with security, privacy, and responsible AI. Using Amazon Bedrock, you can easily experiment with and
+            evaluate top FMs for your use case, privately customize them with your data using techniques such as
+            fine-tuning and Retrieval Augmented Generation (RAG), and build agents that execute tasks using your
+            enterprise systems and data sources. Since Amazon Bedrock is serverless, you don't have to manage any
+            infrastructure, and you can securely integrate and deploy generative AI capabilities into your applications
+            using the AWS services you are already familiar with.
+        </p>
+        <p>
+            <a href="https://aws.amazon.com/bedrock/developer-experience/"> Learn more about Amazon Bedrock.</a>
+        </p>
+        <p style="text-align: center;">
+            <img src="bedrock-logo.png" alt="bedrock" width="1200" height="600">
+        </p>
+        <h2></b>Benefits</b></h2>
+        <ul>
+            <li>privacy</li>
+            <li>Safety</li>
+            <li>Security and Data Protection</li>
+
+        </ul>
+        <h2><b>Common Use cases</b></h2>
+        <ul>
+            <li>Text Generation</li>
+            <li>Virtual assistants</li>
+            <li>Text and image search</li>
+            <li>text summarization</li>
+            <li>Image Generation</li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy;Amazon Web Services</p>
+    </footer>
 </body>
-</html> 
+
+</html>
