--- a/use-cases.html
+++ b/use-cases.html
@@ -1,39 +1,77 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset=utf-8>
-<title>AWS S3</title>
+<meta charset="utf-8">
+<title>Amazon Bedrock Use Cases</title>
 <link rel="stylesheet" href="style.css">
+<style>
+    section {
+        padding: 40px;
+    }
+    #image-container {
+        margin: 0 auto;
+        max-width: 1000px;
+    }
+    div img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+    h2 {
+        color: #006699;
+        font-size: 28px;
+        margin-top: 20px;
+    }
+    p {
+        margin: 10px 0 20px;
+    }
+</style>
 </head>
 <body>
-<header><img class="logo" src="https://d1.awsstatic.com/uki-digital-marketing-content-directory/AWS%20logo.884800f1674e960b6134af7340ac45ab21d99682.png" alt="logo">
-<p class="pageTitle">Simple Storage Service (S3)</p>
-<nav class="hover-div">
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="use-cases.html">Use Cases</a></li>
-<li><a href="how-to.html">How To</a></li>
-</ul>
-</nav>
+<header>
+    <img class="logo" src="https://d1.awsstatic.com/uki-digital-marketing-content-directory/AWS%20logo.884800f1674e960b6134af7340ac45ab21d99682.png" alt="logo">
+    <p class="pageTitle">Amazon Bedrock</p>
+    <nav class="hover-div header-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="use-cases.html">Use Cases</a></li>
+            <li><a href="how-to.html">How To</a></li>
+        </ul>
+    </nav>
 </header>
 <section>
-<img src="use-cases.png" alt="S3">
-<h2>Data Lakes</h2>
-<p>A data lake is a centralized repository that allows you to store all your structured and unstructured data at any scale. You can run data analytics, artificial intelligence (AI), machine learning (ML), and high-performance computing (HPC) applications to unlock the value of your data.</p>
-<p>With an Amazon S3 data lake, users in Salesforce’s organization can discover, access, and analyze all their data, regardless of where it lives, in a secure and governed way.</p>
-<h2>Backup and Restore Data</h2>
-<p>Meet your recovery time objective (RTO), recovery point objective (RPO), and compliance requirements with S3's robust replication functionality, data protection with AWS Backup, and various AWS Partner Network solutions.</p>
-<p>Ancestry uses the Amazon S3 Glacier storage classes to restore terabytes of images in mere hours instead of days.</p>
-<h2>Archive Data</h2>
-<p>Move data archives to the Amazon S3 Glacier storage classes to lower costs, eliminate operational complexities, and gain new insights.</p>
-<p>The BBC, a UK public service broadcaster, safely migrated its 100-year-old flagship archive to Amazon S3 Glacier Instant Retrieval.</p>
-<h2>Generative AI</h2>
-<p>Because Amazon S3 stores more than 350 trillion objects (exabytes of data) for virtually any use case and averages over 100 million requests per second, it may be the starting point of your generative AI journey.</p>
-<p>Grendene is creating a generative AI-based virtual assistant for their sales team using a data lake built on Amazon S3.</p>
+    <div id="image-container">
+        <img src="use-cases.png" alt="Amazon Bedrock">
+    </div>
+    <h2>Text Generation</h2>
+    <p>Create new pieces of original content such as short stories, essays, social media posts, and web page copy using Amazon Bedrock's text generation models from AI21 Labs and Cohere.</p>
+   
+    <h2>Virtual Assistants</h2>
+    <p>Build assistants that understand user requests, engage in dialogue, and perform tasks using your enterprise systems and data sources.</p>
+   
+    <h2>Text and Image Search</h2>
+    <p>Search and synthesize relevant information to answer questions and provide recommendations from large corpuses of text and image data.</p>
+   
+    <h2>Text Summarization</h2>
+    <p>Get concise summaries of long documents such as articles, reports, and technical documentation to quickly extract important information.</p>
+   
+    <h2>Image Generation</h2>
+    <p>Quickly create realistic and visually appealing images for ad campaigns, websites, presentations, and more using Stability AI's models.</p>
 
+    <h2>Content Generation for Marketing</h2>
+    <p>Generative AI on Amazon Bedrock can automatically generate marketing collateral, including images, taglines, and social media posts, ensuring a consistent and engaging flow of content.</p>
+
+    <h2>Conversational Agents</h2>
+    <p>Generative AI models on Amazon Bedrock can enhance the natural language understanding and response generation capabilities of conversational agents, leading to improved customer satisfaction.</p>
+
+    <h2>Internal Knowledge Bases</h2>
+    <p>Generative AI on Bedrock can make organizational knowledge bases easily accessible, improving decision-making processes and accelerating the learning and development of teams.</p>
+
+    <h2>Image Synthesis and Style Transfer</h2>
+    <p>Generative AI models on AWS Bedrock can synthesize images or apply artistic styles to existing images, useful for creating unique visual content like digital artwork and product designs.</p>
 </section>
 <footer>
-<p>&copy;Amazon Web Services</p>
+    <p>&copy; Amazon Web Services</p>
 </footer>
 </body>
-</html> 
+</html>
